<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jparsec</groupId>
    <artifactId>JavaParsec</artifactId>
    <version>1.1.1</version>

    <name>Java Parsec</name>
    <description>Parser combinators for Java 21</description>
    <url>https://github.com/dgawlik/JavaParsec</url>


    <distributionManagement>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/dgawlik/JavaParsec</url>
        </repository>
    </distributionManagement>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>dgawlik</id>
            <name>Dominik Gawlik</name>
            <email>dominik.gawlik1@gmail.com</email>
        </developer>
    </developers>

    <scm>
        <connection>https://github.com/dgawlik/JavaParsec.git</connection>
        <developerConnection>git@github.com:dgawlik/JavaParsec.git</developerConnection>
        <url>https://github.com/dgawlik/JavaParsec</url>
        <tag>HEAD</tag>
    </scm>


    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.2.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
            <plugin>
                <groupId>org.asciidoctor</groupId>
                <artifactId>asciidoctor-maven-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>generate-docs</id>
                        <goals>
                            <goal>process-asciidoc</goal>
                        </goals>
                        <phase>prepare-package</phase>
                        <configuration>
                            <sourceDirectory>${project.basedir}/docs</sourceDirectory>
                            <outputDirectory>${project.build.directory}/site</outputDirectory>
                            <attributes>
                                <!-- Enable highlight.js -->
                                <source-highlighter>highlightjs</source-highlighter>
                                <highlightjs-theme>atom-one-dark</highlightjs-theme>

                                <toc>left</toc>
                                <toclevels>3</toclevels>
                                <sectanchors>true</sectanchors>
                            </attributes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <source>21</source>
                    <additionalJOptions>
                        <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption><!-- 1 -->
                        <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption><!-- 1 -->
                        <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption><!-- 1 -->
                        <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</additionalJOption><!-- 1 -->
                        <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption><!-- 1 -->
                        <additionalJOption>-Xdoclint:all,-html,-accessibility</additionalJOption><!-- 2 -->
                    </additionalJOptions>
                    <doclet>org.asciidoctor.asciidoclet.Asciidoclet</doclet>
                    <docletArtifact>
                        <groupId>org.asciidoctor</groupId>
                        <artifactId>asciidoclet</artifactId>
                        <version>2.0.0</version>
                    </docletArtifact>
                    <additionalparam>
                        --base-dir ${project.basedir}
                        --attribute "name=${project.name}"
                        --attribute "version=${project.version}"
                        --attribute "title-link=https://example.com[${project.name} ${project.version}]"
                    </additionalparam>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>